force-app/main/default/objects/encompass_By_EM__Residence__c/encompass_By_EM__Residence__c.object-meta.xml
<CustomObject>
    <label>Residence</label>
    <nameField>
        <displayFormat>Residence-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Residence</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>