force-app/main/default/objects/encompass_By_EM__Residence__c/fields/BorrowerMailingIndicator__c.field-meta.xml
<CustomField>
    <fullName>BorrowerMailingIndicator__c</fullName>
    <label>BorrowerMailingIndicator</label>
    <length>100</length>
    <type>Text</type>
</CustomField>