force-app/main/default/objects/encompass_By_EM__Residence__c/fields/encompass_By_EM__CoBorrowerindicator__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__CoBorrowerindicator__c</fullName>
    <label>CoBorrowerindicator</label>
    <length>100</length>
    <type>Text</type>
</CustomField>