force-app/main/default/objects/encompass_By_EM__Residence__c/fields/encompass_By_EM__Is_Deleted__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Is_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Deleted</label>
    <type>Checkbox</type>
</CustomField>