force-app/main/default/objects/encompass_By_EM__Residence__c/fields/encompass_By_EM__Street__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Street__c</fullName>
    <label>Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>