force-app/main/default/objects/encompass_By_EM__Residence__c/fields/encompass_By_EM__Years_at_Residence__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Years_at_Residence__c</fullName>
    <label>Years at Residence</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>