force-app/main/default/objects/encompass_By_EM__Residence__c/fields/encompass_By_EM__ZIP_Code__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__ZIP_Code__c</fullName>
    <label>ZIP Code</label>
    <length>24</length>
    <type>Text</type>
</CustomField>